--- a/scss/entregaFinal.scss
+++ b/scss/entregaFinal.scss
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+/*
 h1 {
     color: blue;
 
@@ -18,4 +18,4 @@ img {
     align-items: center;
     padding: 2rem;
 }
-
+*/
